src/test/deca/context/invalid/inheritance/extends_non_class_custom.deca
// Description :
// héritage depuis une variable non-class
//
// Resultats :
// Erreur contextuelle
// Ligne 5 : tentative d'extends sur un type non-class

int X;
class E extends X { // doit échouer
}
